bk_ida/gccida/c1/record_conflicts
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_conflicts/src/global.c:1857:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v2 = allocno_0; 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_conflicts/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_conflicts/src/obj/global.o] Error 1
